--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,8 @@ rvm:
 before_install:
   - gem update --system
   - gem install bundler --pre
+
+deploy:
+  provider: heroku
+  api_key:
+    secure: "..."
