--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,38 @@
 language: ruby
-rvm:
+cache:
+- bundler
+#rvm:
+#- 2.6.1
 
 before_install:
   - gem update --system
   - gem install bundler --pre
 
+before_script:
+- bundle exec rake db:create
+- bundle exec rake db:migrate
+- bundle exec rake assets:precompile
+
 deploy:
   provider: heroku
   api_key:
-    secure: "..."
+    secure: 3f57ff05-b317-4b08-99f4-77649d64aea8
+    app: projet_backend_dep
+  on:
+    repo: meldBayi/projet_backend
+
+
+#language: ruby
+#cache:
+#- bundler
+#before_script:
+#- bundle exec rake db:create
+#- bundle exec rake db:migrate
+#- bundle exec rake assets:precompile
+#deploy:
+#  provider: heroku
+#  api_key:
+#    secure: KEY
+#  app: rails-test-app-article
+#  on:
+#    repo: felipeluizsoares/rails-test-app
