--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ deploy:
   api_key:
     secure: c38dd210-60c4-4a56-9613-543d0c196b72
     app: backndprojectapp
-
+    on:
+    repo:  meldBayi / projet_backend
 
 
 #language: ruby
